--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,6 +1,3 @@
-
-#ci/cd workflow
-
 name: CI/CD
 on:
   push:
@@ -10,9 +7,9 @@ on:
 jobs:
   build_test_deploy:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v2
-
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -26,3 +23,17 @@ jobs:
         run: |
           pytest
 
+      - name: Deploy to ClawCloud via SSH
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.CLAW_HOST }}
+          username: ${{ secrets.CLAW_USERNAME }}
+          key: ${{ secrets.CLAW_SSH_KEY }}
+          script: |
+            docker stop ml-api || true
+            docker rm ml-api || true
+            rm -rf ~/ml-api
+            git clone https://github.com/<your-username>/<your-repo>.git ~/ml-api
+            cd ~/ml-api
+            docker compose down || true
+            docker compose up --build -d
