--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -27,9 +27,9 @@ jobs:
       - name: Deploy to AWS EC2 via SSH
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.EC2_HOST }}         # e.g., 3.122.123.12
-          username: ubuntu                      # or ec2-user for Amazon Linux
-          key: ${{ secrets.EC2_SSH_KEY }}       # contents of your .pem file
+          host: ${{ secrets.EC2_HOST }}         
+          username: ubuntu                      
+          key: ${{ secrets.EC2_SSH_KEY }}       
           port: 22
           script: |
             docker stop ml-api || true
